src/assembly/parser.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.6 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

import {
  Directive,

  ConstantDirective, ImmediateConstant, ReferenceConstant,
  DataDirective, TextData, ImmediatesData, ReferenceData,
  InstructionDirective,
  LabelDirective,

  Reference,

  AssemblyProgram,
} from './assembly';
import { Instruction, Operation, Register } from '../vm/instructions';

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<{}> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { Directives: peg$parseDirectives };
  let peg$startRuleFunction: () => any = peg$parseDirectives;

  const peg$c0 = function(ds: any, d: any): any {
      return new AssemblyProgram([
        ...ds.map((d: any) => d[1]).filter((d: any): d is Directive => !!d),
        ...d ? [d] : [],
      ]);
    };
  const peg$c1 = "\n";
  const peg$c2 = peg$literalExpectation("\n", false);
  const peg$c3 = function(d: any): any { return d; };
  const peg$c4 = function(): any { return; };
  const peg$c5 = function(instruction: any): any { return new InstructionDirective(instruction).at(location(), text(), options); };
  const peg$c6 = ";";
  const peg$c7 = peg$literalExpectation(";", false);
  const peg$c8 = /^[^\n]/;
  const peg$c9 = peg$classExpectation(["\n"], true, false);
  const peg$c10 = "constant";
  const peg$c11 = peg$literalExpectation("constant", false);
  const peg$c12 = function(r: any, reference: any): any { return new ConstantDirective(r, new ReferenceConstant(reference)).at(location(), text(), options); };
  const peg$c13 = function(r: any, number: any): any { return new ConstantDirective(r, new ImmediateConstant(number)).at(location(), text(), options); };
  const peg$c14 = "data";
  const peg$c15 = peg$literalExpectation("data", false);
  const peg$c16 = function(reference: any, numbers: any): any { return new DataDirective(reference, new ImmediatesData(numbers)).at(location(), text(), options); };
  const peg$c17 = function(reference: any, string: any): any { return new DataDirective(reference, new TextData(string)).at(location(), text(), options); };
  const peg$c18 = function(reference: any, id: any): any { return new DataDirective(reference, new ReferenceData(id)).at(location(), text(), options); };
  const peg$c19 = ":";
  const peg$c20 = peg$literalExpectation(":", false);
  const peg$c21 = function(reference: any): any { return new LabelDirective(reference).at(location(), text(), options); };
  const peg$c22 = function(operation: any, dr: any, sr0: any, sr1: any): any { return Instruction.createOperation(operation, dr, sr0, sr1); };
  const peg$c23 = function(operation: any, dr: any, sr0: any): any { return Instruction.createOperation(operation, dr, sr0); };
  const peg$c24 = function(operation: any, sr0: any, sr1: any): any { return Instruction.createOperation(operation, undefined, sr0, sr1); };
  const peg$c25 = function(operation: any, sr0: any): any { return Instruction.createOperation(operation, undefined, sr0); };
  const peg$c26 = function(operation: any): any { return Instruction.createOperation(operation); };
  const peg$c27 = "add";
  const peg$c28 = peg$literalExpectation("add", false);
  const peg$c29 = function(): any { return Operation.ADD; };
  const peg$c30 = "sub";
  const peg$c31 = peg$literalExpectation("sub", false);
  const peg$c32 = function(): any { return Operation.SUB; };
  const peg$c33 = "mul";
  const peg$c34 = peg$literalExpectation("mul", false);
  const peg$c35 = function(): any { return Operation.MUL; };
  const peg$c36 = "div";
  const peg$c37 = peg$literalExpectation("div", false);
  const peg$c38 = function(): any { return Operation.DIV; };
  const peg$c39 = "mod";
  const peg$c40 = peg$literalExpectation("mod", false);
  const peg$c41 = function(): any { return Operation.MOD; };
  const peg$c42 = "and";
  const peg$c43 = peg$literalExpectation("and", false);
  const peg$c44 = function(): any { return Operation.AND; };
  const peg$c45 = "or";
  const peg$c46 = peg$literalExpectation("or", false);
  const peg$c47 = function(): any { return Operation.OR; };
  const peg$c48 = "eq";
  const peg$c49 = peg$literalExpectation("eq", false);
  const peg$c50 = function(): any { return Operation.EQ; };
  const peg$c51 = "neq";
  const peg$c52 = peg$literalExpectation("neq", false);
  const peg$c53 = function(): any { return Operation.NEQ; };
  const peg$c54 = "lt";
  const peg$c55 = peg$literalExpectation("lt", false);
  const peg$c56 = function(): any { return Operation.LT; };
  const peg$c57 = "gt";
  const peg$c58 = peg$literalExpectation("gt", false);
  const peg$c59 = function(): any { return Operation.GT; };
  const peg$c60 = "load";
  const peg$c61 = peg$literalExpectation("load", false);
  const peg$c62 = function(): any { return Operation.LOAD; };
  const peg$c63 = "store";
  const peg$c64 = peg$literalExpectation("store", false);
  const peg$c65 = function(): any { return Operation.STORE; };
  const peg$c66 = "mov";
  const peg$c67 = peg$literalExpectation("mov", false);
  const peg$c68 = function(): any { return Operation.MOV; };
  const peg$c69 = "not";
  const peg$c70 = peg$literalExpectation("not", false);
  const peg$c71 = function(): any { return Operation.NOT; };
  const peg$c72 = "jz";
  const peg$c73 = peg$literalExpectation("jz", false);
  const peg$c74 = function(): any { return Operation.JZ; };
  const peg$c75 = "jnz";
  const peg$c76 = peg$literalExpectation("jnz", false);
  const peg$c77 = function(): any { return Operation.JNZ; };
  const peg$c78 = "jmp";
  const peg$c79 = peg$literalExpectation("jmp", false);
  const peg$c80 = function(): any { return Operation.JMP; };
  const peg$c81 = "int";
  const peg$c82 = peg$literalExpectation("int", false);
  const peg$c83 = function(): any { return Operation.INT; };
  const peg$c84 = "halt";
  const peg$c85 = peg$literalExpectation("halt", false);
  const peg$c86 = function(): any { return Operation.HALT; };
  const peg$c87 = "wait";
  const peg$c88 = peg$literalExpectation("wait", false);
  const peg$c89 = function(): any { return Operation.WAIT; };
  const peg$c90 = "nop";
  const peg$c91 = peg$literalExpectation("nop", false);
  const peg$c92 = function(): any { return Operation.NOP; };
  const peg$c93 = "ip";
  const peg$c94 = peg$literalExpectation("ip", false);
  const peg$c95 = function(r: any): any { return Register.parse(r); };
  const peg$c96 = function(dr: any): any { return dr; };
  const peg$c97 = "r";
  const peg$c98 = peg$literalExpectation("r", false);
  const peg$c99 = /^[0-9]/;
  const peg$c100 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c101 = function(number: any): any { return Register.parse("r" + number.join('')); };
  const peg$c102 = "@";
  const peg$c103 = peg$literalExpectation("@", false);
  const peg$c104 = function(id: any): any { return new Reference(id); };
  const peg$c105 = "::";
  const peg$c106 = peg$literalExpectation("::", false);
  const peg$c107 = function(i: any, tail: any): any { return [i, ...tail.map((t: any) => t[1])].join('::'); };
  const peg$c108 = /^[a-zA-Z_]/;
  const peg$c109 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  const peg$c110 = /^[a-zA-Z_0-9$]/;
  const peg$c111 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"], "$"], false, false);
  const peg$c112 = function(character: any, characters: any): any { return character + characters.join(''); };
  const peg$c113 = "0x";
  const peg$c114 = peg$literalExpectation("0x", false);
  const peg$c115 = /^[0-9a-fA-F]/;
  const peg$c116 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false);
  const peg$c117 = function(number: any): any { return parseInt(number.join(''), 16); };
  const peg$c118 = "0b";
  const peg$c119 = peg$literalExpectation("0b", false);
  const peg$c120 = /^[01]/;
  const peg$c121 = peg$classExpectation(["0", "1"], false, false);
  const peg$c122 = function(digits: any): any { return parseInt(digits.join(''), 2); };
  const peg$c123 = function(number: any): any { return parseInt(number.join(''), 10); };
  const peg$c124 = function(number: any, tail: any): any { return [ number, ...tail.map((t: any) => t[1]) ]; };
  const peg$c125 = "'";
  const peg$c126 = peg$literalExpectation("'", false);
  const peg$c127 = function(characters: any): any { return characters.join(''); };
  const peg$c128 = "\\\\";
  const peg$c129 = peg$literalExpectation("\\\\", false);
  const peg$c130 = function(): any { return "\\"; };
  const peg$c131 = "\\'";
  const peg$c132 = peg$literalExpectation("\\'", false);
  const peg$c133 = function(): any { return "'"; };
  const peg$c134 = "\\n";
  const peg$c135 = peg$literalExpectation("\\n", false);
  const peg$c136 = function(): any { return "\n"; };
  const peg$c137 = /^[^\\\n']/;
  const peg$c138 = peg$classExpectation(["\\", "\n", "'"], true, false);
  const peg$c139 = peg$otherExpectation("whitespace");
  const peg$c140 = /^[ \t]/;
  const peg$c141 = peg$classExpectation([" ", "\t"], false, false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseDirectives(): any {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    if (s3 !== peg$FAILED) {
      s4 = peg$parseCommentedDirective();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseTerminator();
          if (s6 !== peg$FAILED) {
            s3 = [s3, s4, s5, s6];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parse_();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCommentedDirective();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseTerminator();
            if (s6 !== peg$FAILED) {
              s3 = [s3, s4, s5, s6];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseCommentedDirective();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTerminator(): any {
    let s0;

    if (input.charCodeAt(peg$currPos) === 10) {
      s0 = peg$c1;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseCommentedDirective(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseDirective();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseComment();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseDirective();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseComment();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4();
        }
        s0 = s1;
      }
    }

    return s0;
  }

  function peg$parseDirective(): any {
    let s0, s1;

    s0 = peg$parseConstant();
    if (s0 === peg$FAILED) {
      s0 = peg$parseData();
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseInstruction();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$parseLabel();
        }
      }
    }

    return s0;
  }

  function peg$parseComment(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 59) {
      s1 = peg$c6;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      if (peg$c8.test(input.charAt(peg$currPos))) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        if (peg$c8.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseConstant(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c10) {
      s1 = peg$c10;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseDestinationRegister();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseReference();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c12(s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c10) {
        s1 = peg$c10;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseDestinationRegister();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseNumber();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c13(s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseData(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c14) {
      s1 = peg$c14;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseReference();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseNumberList();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c16(s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c14) {
        s1 = peg$c14;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c15); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseReference();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseString();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c17(s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 4) === peg$c14) {
          s1 = peg$c14;
          peg$currPos += 4;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseReference();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseReference();
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c18(s3, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseLabel(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseReference();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c19;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c20); }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c21(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInstruction(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
